--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=63300
-spring.data.mongodb.database=track_dB
+spring.data.mongodb.database=track_dBTest
 spring.dat.mongodb.uri=mongodb://localhost:27017/
 server.error.include-message=always
